<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/item1"
            android:icon="@drawable/favorite_black_24dp"
            android:title="@string/favourite_btn"
            android:checked="true" />
        <item
            android:id="@+id/item2"
            android:icon="@drawable/library_music_black_24dp"
            android:title="@string/playlist_btn" />
        <item
            android:id="@+id/item3"
            android:icon="@drawable/shuffle_black_24dp"
            android:title="@string/shuffle_btn" />
    </group>

</menu>