<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/drawer_layout"
    android:layout_height="match_parent"
    tools:context=".ui.activities.MainActivity">


    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <include
            android:id="@+id/include"
            layout="@layout/top_app_bar" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_marginTop="?actionBarSize"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <Button
                    android:id="@+id/shuffle_btn"
                    style="@style/MenuButtons"
                    android:drawableTop="@drawable/shuffle_black_24dp"
                    android:text="@string/shuffle_btn" />

                <Button
                    android:id="@+id/favourite_btn"
                    style="@style/MenuButtons"
                    android:drawableTop="@drawable/favorite_black_24dp"
                    android:text="@string/favourite_btn" />

                <Button
                    android:id="@+id/playlist_btn"
                    style="@style/MenuButtons"
                    android:drawableTop="@drawable/library_music_black_24dp"
                    android:text="@string/playlist_btn" />

            </LinearLayout>

            <TextView
                android:id="@+id/total_songs"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:paddingStart="8dp"
                android:text="@string/total_songs"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                tools:ignore="RtlSymmetry" />

            <androidx.recyclerview.widget.RecyclerView
                android:layout_marginTop="8dp"
                android:id="@+id/recyclerView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/total_songs"
                tools:listitem="@layout/song_list_layout" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


    <com.google.android.material.navigation.NavigationView
        android:layout_width="wrap_content"
        app:menu="@menu/nav_menu"
        app:headerLayout="@layout/nav_header"
        android:layout_height="match_parent"
        android:layout_gravity="start" />


</androidx.drawerlayout.widget.DrawerLayout>