<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activities.PlayerActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/back_btn"
            style="@style/MenuButtons"
            android:layout_width="wrap_content"
            android:contentDescription="@string/back_btn"
            android:src="@drawable/ic_round_arrow_back_ios_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="marquee"
            android:gravity="center"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:singleLine="true"
            android:text="@string/app_name"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/favourite_btn"
            app:layout_constraintStart_toEndOf="@+id/back_btn"
            app:layout_constraintTop_toTopOf="parent" />


        <ImageButton
            android:id="@+id/favourite_btn"
            style="@style/MenuButtons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/fav_btn"
            android:src="@drawable/favorite_border_black_24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.card.MaterialCardView
        android:id="@+id/image_card"
        android:layout_width="256dp"
        app:strokeWidth="5dp"
        app:strokeColor="@color/cool_blue"
        app:cardElevation="0dp"
        app:cardCornerRadius="16dp"
        android:layout_marginTop="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        android:layout_height="256dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/shapeableImageView"
            android:layout_width="256dp"
            android:layout_height="256dp"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher"
            app:shapeAppearanceOverlay="@style/AlbumImage" />

    </com.google.android.material.card.MaterialCardView>


    <TextView
        android:id="@+id/song_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:ellipsize="marquee"
        android:gravity="center"
        android:layout_margin="32dp"
        android:singleLine="true"
        tools:text="My currently playing song is displayed here And nothing else"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/image_card" />

    <TextView
        android:id="@+id/song_album"
        android:gravity="center"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:layout_marginHorizontal="32dp"
        tools:text="My currently playing song is displayed here And nothing else"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/song_title" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="wrap_content"
        android:ellipsize="marquee"
        android:gravity="center"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/song_album">

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/btn_prev"
            android:layout_weight="1"
            android:contentDescription="@string/control_buttons"
            android:src="@drawable/skip_previous_black_24dp" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:layout_weight="1"
            android:id="@+id/btn_play_pause"
            android:backgroundTint="@color/cool_pink"
            android:contentDescription="@string/control_buttons"
            android:src="@drawable/pause_black_24dp"
            app:tint="@color/white" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_weight="1"
            android:id="@+id/btn_next"
            android:contentDescription="@string/control_buttons"
            android:src="@drawable/skip_next_black_24dp" />

    </LinearLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/progress_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout3"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <TextView
            android:id="@+id/progress_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/seekBar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="20:00" />

        <SeekBar
            android:id="@+id/seekBar"
            android:layout_width="256dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/music_length_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/seekBar"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="5:00" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/repeat_btn"
            style="@style/MenuButtons"
            android:contentDescription="@string/repeat_button"
            android:drawableTop="@drawable/repeat_black_24dp"
            tools:ignore="RedundantDescriptionCheck" />

        <Button
            android:id="@+id/equaliser_btn"
            android:contentDescription="@string/equalizer_button"
            style="@style/MenuButtons"
            android:drawableTop="@drawable/equalizer_black_24dp" />

        <Button
            android:id="@+id/timer_btn"
            android:contentDescription="@string/timer_button"
            style="@style/MenuButtons"
            android:drawableTop="@drawable/timer_black_24dp" />

        <Button
            android:id="@+id/share_btn"
            android:contentDescription="@string/share_button"
            style="@style/MenuButtons"
            android:drawableTop="@drawable/share_black_24dp" />

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>